infra/k8s/event-bus-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: event-bus-depl
  namespace: eks-sample-app
  labels:
    app: event-bus-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: event-bus
  template:
    metadata:
      labels:
        app: event-bus
    spec:
      containers:
        - name: event-bus
          image: 559296319768.dkr.ecr.us-east-1.amazonaws.com/event-bus:latest
          ports:
            - containerPort: 4005
---
apiVersion: v1
kind: Service
metadata:
  name: event-bus-srv
  namespace: eks-sample-app
  labels:
    app: event-bus-srv
spec:
  selector:
    app: event-bus
  type: ClusterIP
  ports:
    - name: event-bus
      protocol: TCP
      port: 4005
      targetPort: 4005
